--- a/package.json
+++ b/package.json
@@ -2,13 +2,8 @@
   "name": "long-baseline-neutrino-oscillation-newsletter",
   "main": "expo-router/entry",
   "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
+  "script": {
+    "deploy": "eas deploy --export-dir=site",
     "lint": "expo lint"
   },
   "jest": {
